--- a/DSTB_015.yaml
+++ b/DSTB_015.yaml
@@ -11,6 +11,19 @@
     path: "/trojanws"
     headers:
       Host: sg-ctn.sshpremium.my.id
+- name: danuWs14_LiveONDigitalOcean
+  type: trojan
+  server: beacon.liveon.id
+  port: 443
+  password: e04624b1-edac-46df-8a55-5d52efa9af6d
+  udp: true
+  sni: sg-do.sshpremium.my.id
+  skip-cert-verify: true
+  network: ws
+  ws-opts:
+    path: "/trojanws"
+    headers:
+      Host: sg-do.sshpremium.my.id
 - name: DanuJuragan01_LiveONBizzNet
   type: trojan
   server: beacon.liveon.id
