--- a/DSTB_015.yaml
+++ b/DSTB_015.yaml
@@ -1,17 +1,17 @@
 proxies:
-- name: TrojanWsSvr-Live_1
+- name: Laviana_LiveDO_1
   type: trojan
-  server: 104.18.1.196
+  server: 104.21.8.121
   port: 443
-  password: 9766b64f-2d18-464b-8be5-02231f0e0c44
+  password: f051da8b-2455-4371-9749-6e2827f33336
   udp: true
-  sni: sgdo3.dstb.cloud
+  sni: danu529.foryou-ssh.my.id
   skip-cert-verify: true
   network: ws
   ws-opts:
     path: /trojan-ws
     headers:
-      Host: sgdo3.dstb.cloud
+      Host: danu529.foryou-ssh.my.id
 - name: danu15_LiveDO15a
   type: trojan
   server: 104.21.8.121
