--- a/DSTB_015.yaml
+++ b/DSTB_015.yaml
@@ -1,4 +1,17 @@
 proxies:
+- name: Laviana_LiveDO_1
+  type: trojan
+  server: beacon.liveon.id
+  port: 443
+  password: ce8b15b8-884b-45de-a70a-e226bbad5d46
+  udp: true
+  sni: danu529.foryou-ssh.my.id
+  skip-cert-verify: true
+  network: ws
+  ws-opts:
+    path: /trojan-ws
+    headers:
+      Host: danu529.foryou-ssh.my.id
 - name: Laviana1_LiveDO_2
   type: trojan
   server: circles.asia
@@ -12,19 +25,6 @@ proxies:
     path: /xraytrojanws
     headers:
       Host: sgdo2.myserver-prem.xyz
-- name: Laviana_LiveDO_1
-  type: trojan
-  server: circles.asia
-  port: 443
-  password: f051da8b-2455-4371-9749-6e2827f33336
-  udp: true
-  sni: danu529.foryou-ssh.my.id
-  skip-cert-verify: true
-  network: ws
-  ws-opts:
-    path: /trojan-ws
-    headers:
-      Host: danu529.foryou-ssh.my.id
 - name: TrojanWsSvr-Live_1
   type: trojan
   server: circles.asia
