--- a/DSTB_015.yaml
+++ b/DSTB_015.yaml
@@ -64,20 +64,7 @@ proxies:
     path: /trojan-ws
     headers:
       Host: dstb.cloud
-- name: Laviana1Nusa_LiveNusa_1
-  type: trojan
-  server: beacon.liveon.id
-  port: 443
-  password: a27d712d-a406-40de-97af-96e7b0166db1
-  udp: true
-  sni: vpna4mvbhv.scpotato.me
-  skip-cert-verify: true
-  network: ws
-  ws-opts:
-    path: /trojan
-    headers:
-      Host: vpna4mvbhv.scpotato.me
-- name: Laviana1Svr1_LiveDO_1
+- name: LavianaDo1A_Live_H2
   type: trojan
   server: beacon.liveon.id
   port: 443
@@ -90,7 +77,7 @@ proxies:
     path: /trojan-ws
     headers:
       Host: danu529.foryou-ssh.my.id
-- name: Laviana1_LiveDO_2
+- name: LavianaDo1B_Live_H1
   type: trojan
   server: circles.asia
   port: 443
@@ -103,7 +90,7 @@ proxies:
     path: /xraytrojanws
     headers:
       Host: sgdo2.myserver-prem.xyz
-- name: TrojanWsSvr-Live_1
+- name: TrojanWsDo1C-Live_H1
   type: trojan
   server: circles.asia
   port: 443
